<resources>
    <string name="app_name">EveryNoiseAtOnce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">No account? Register!</string>
    <string name="nickname">Nickname</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="every">Every</string>
    <string name="noise">Noise</string>
    <string name="at">At</string>
    <string name="once">Once</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="every_noise_at_once_n_1_0_n">Приложение Every Noise At Once\nВерсия 1.0\nАвтор: Аружан</string>
    <string name="artist_image">Artist Image</string>
    <string name="open_in_spotify">Open in Spotify</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="related_artists">Related Artists</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="all">All</string>
    <string name="search_genres">Search genres...</string>
    <string name="profile_image">Profile Image</string>
    <string name="about">О приложении</string>
    <string name="whatsapp">Техподдержка (WhatsApp)</string>
    <string name="logout">Выход из аккаунта</string>
    <string name="fav_icon">Fav Icon</string>
    <string name="artist_name">Artist Name</string>
    <string name="genre_name">Genre Name</string>
    <string name="track_name">Track Name</string>
</resources>