<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/filterGroup"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/filterAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />
        <RadioButton
            android:id="@+id/filterGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres" />
        <RadioButton
            android:id="@+id/filterArtists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artists" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
